--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="slide.css">
-    <title>My Birthday Slide</title>
+    <title>My Image diary</title>
 </head>
 <body>
     <div>
-        <h2>Birthday </h2>
+        <h2>Odun-Images </h2>
 
     <div class="slider">
-        <span style="--i:1;"><img src="images/img1.jpeg" alt=""></span>
-        <span  style="--i:2;"><img src="images/img2.jpeg" alt=""></span>
+        <span style="--i:1;"><img src="images/img10.jpeg" alt=""></span>
+        <span  style="--i:2;"><img src="images/img11.jpeg" alt=""></span>
         <span style="--i:3;"><img src="images/img3.jpeg" alt=""></span>
         <span style="--i:4;"><img src="images/img4.jpeg" alt=""></span>
-        <span style="--i:5;"><img src="images/img5.jpeg" alt=""></span>
+        <span style="--i:5;"><img src="images/img13.jpeg" alt=""></span>
         <span style="--i:6;"><img src="images/img7.jpeg" alt=""></span>
         <span style="--i:7;"><img src="images/img8.jpeg" alt=""></span>
         <span style="--i:8;"><img src="images/img9.jpeg" alt=""></span>
